--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jan 03 17:37:54 IST 2025
-sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
+#Mon Jan 06 17:51:18 IST 2025
+sdk.dir=C\:\\Users\\jhhghgjb\\AppData\\Local\\Android\\Sdk
